# openvino_practice

./: .gitignore  .travis.yml  CMakeLists.txt  DenseNet_121.mapping  README.md  index.html  index.js  main.cpp  package.json
0_git/: CMakeLists.txt
data/: DenseNet_121.xml  candy_int8.xml  face-detection-0104.xml  my_squad_answer.txt  my_squad_question.txt  my_squad_source.txt  squad_question.txt  squad_source.txt
modules/0_git/: README.md
modules/0_git/include/: header.hpp
modules/0_git/src/: source.cpp
modules/0_git/test/: main.cpp
modules/10_reinforcement_learning/: README.md  reinforcement_learning.py  requirements.txt
modules/11_gan/: README.md  generator.py
modules/1_opencv/: README.md
modules/1_opencv/include/: opencv_basics.hpp  opencv_coins.hpp  opencv_imgproc.hpp
modules/1_opencv/src/: opencv_basics.cpp  opencv_coins.cpp  opencv_imgproc.cpp
modules/1_opencv/test/: main.cpp  test_basics.cpp  test_coins.cpp  test_imgproc.cpp
modules/2_classification/: README.md
modules/2_classification/include/: classifier.hpp
modules/2_classification/src/: classifier.cpp
modules/2_classification/test/: test_classifier.cpp
modules/2_mnist/: README.md
modules/2_mnist/include/: mnist.hpp  mnist_reader.hpp
modules/2_mnist/src/: mnist.cpp  mnist_reader.cpp
modules/2_mnist/test/: test_data_loader.cpp
modules/3_classification/: README.md
modules/3_classification/src/: classifier.cpp
modules/3_classification/test/: test_classifier.cpp
modules/3_detection/: README.md
modules/3_detection/include/: detector.hpp
modules/3_detection/src/: detector.cpp
modules/3_detection/test/: test_detector.cpp
modules/4_detection/include/: detector.hpp
modules/4_detection/src/: detector.cpp
modules/4_detection/test/: test_detector.cpp
modules/4_mnist/include/: mnist.hpp
modules/4_mnist/src/: mnist.cpp
modules/4_mnist/test/: test_data_loader.cpp  test_model.cpp
modules/5_segmentation/: README.md  requirements.txt
modules/5_segmentation/src/: segmentation.cpp  (+1 more)
modules/5_tracking/: README.md  tracker.py
modules/6_nlp/: README.md
modules/6_segmentation/: README.md  requirements.txt
modules/7_nlp/: README.md
modules/8_quantization/: README.md  bot.py  quantize.py  style_transfer.py  test_quantization.py
modules/8_reinforcement_learning/: README.md  q_values.npy  reinforcement_learning.py  requirements.txt  test_reinforcement_learning.py
modules/9_colorization/: README.md  colorization.py  test_colorization.py
modules/9_gan/: README.md  generator.py  test_gan.py  test_generator.py
(+17 files in other folders)
